<?xml version="1.0" encoding="UTF-8"?>
<!--

    (c) https://github.com/MontiCore/monticore

    The license generally applicable for this project
    can be found under https://github.com/MontiCore/monticore.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- PARENT PROJECT -->
    <parent>
        <artifactId>simulation</artifactId>
        <groupId>montisim</groupId>
        <version>${revision}</version>
    </parent>

    <!-- OUR OWN PROJECT -->
    <artifactId>network</artifactId>
    <groupId>montisim-simulation</groupId>
    <version>${revision}</version>

    <!-- PROJECT DEPENDENCIES -->
    <dependencies>

        <!-- All modules have dependency to util -->
        <dependency>
            <groupId>montisim-simulation</groupId>
            <artifactId>util</artifactId>
            <version>${revision}</version>
        </dependency>

        <!-- Network has dependency to vehicle -->
        <dependency>
            <groupId>montisim-simulation</groupId>
            <artifactId>vehicle</artifactId>
            <version>${revision}</version>
        </dependency>

        <!-- Network has dependency to commons -->
        <dependency>
            <groupId>montisim</groupId>
            <artifactId>commons</artifactId>
            <version>${commons.version}</version>
        </dependency>

    </dependencies>


    <!-- PROJECT PLUGINS AND PROPERTIES -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <!-- Set root directory to ensure same execution context in subprojects (e.g. for Log in test mode) -->
                    <workingDirectory>${project.parent.basedir}</workingDirectory>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>

        <!-- Set root directory to ensure same execution context in subprojects (e.g. for Log in test mode) -->
        <main.basedir>${project.parent.basedir}</main.basedir>

        <!-- Specify Java 8 as version to avoid compile warnings -->
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

    </properties>
</project>
